@@ -3,6 +3,8 @@ v0.0.12     Unknown
     lib/AI/Pathfinding/OptimizeMultiple.pm constructor.
         - Contains some factors to normalise the iters of specific scans.
     - Add the --stats-factors option to ::CmdLine.
+    - Allow to customise the --total-iterations-limit using
+    $ENV{FC_SOLVE_RANGE_ITERS_LIMIT} .
 
 v0.0.11     2014-03-29
     - Move the external-deps-using release tests to xt/ instead of t/
